--- a/thank-you.html
+++ b/thank-you.html
@@ -5,8 +5,8 @@ permalink: /thank-you/
 
 <html>
    <head>
-       <link rel="stylesheet" href="/css/grid.css">
-       <link rel="stylesheet" href="/css/style.css">
+       <link rel="stylesheet" href="{{site.baseurl}}/css/grid.css">
+       <link rel="stylesheet" href="{{site.baseurl}}/css/style.css">
    </head>
     <body>
        <div class="grid">
@@ -15,7 +15,7 @@ permalink: /thank-you/
            <p>Get back to <a href="/">Homepage</a></p>
            </div>
        </div>
-        
+
     </body>
 </html>
 
